--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 <!--Adobe Edge Runtime End-->
 
 </head>
-<body style="margin:0;padding:0;">
+<body style="margin:0;padding:0;overflow: hidden;">
 	<div id="Stage" class="smgroup-786">
 	</div>
 </body>
