--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
   -webkit-clip-path: url("#Stage_p01f06_mask");
 }
 </style>
-<body style="margin:0;padding:0;overflow: hidden;">
+<body style="margin:0;padding:0;overflow: hidden;background-color:#000000;">
 	<div id="Stage" class="EDGE-2180174">
 	</div>
 </body>
