--- a/www/index.html
+++ b/www/index.html
@@ -51,26 +51,37 @@
 #Stage_p01f01 {
   clip-path: url("#Stage_p01f01_mask");
   -webkit-clip-path: url("#Stage_p01f01_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 #Stage_p01f02 {
   clip-path: url("#Stage_p01f02_mask");
   -webkit-clip-path: url("#Stage_p01f02_mask");
+  -webkit-mask: url("#Stage_p01f02_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 #Stage_p01f03 {
   clip-path: url("#Stage_p01f03_mask");
   -webkit-clip-path: url("#Stage_p01f03_mask");
+  -webkit-mask: url("#Stage_p01f03_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 #Stage_p01f04 {
   clip-path: url("#Stage_p01f04_mask");
   -webkit-clip-path: url("#Stage_p01f04_mask");
+  -webkit-mask: url("#Stage_p01f04_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 #Stage_p01f05 {
   clip-path: url("#Stage_p01f05_mask");
   -webkit-clip-path: url("#Stage_p01f05_mask");
+  -webkit-mask: url("#Stage_p01f05_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 #Stage_p01f06 {
   clip-path: url("#Stage_p01f06_mask");
   -webkit-clip-path: url("#Stage_p01f06_mask");
+  -webkit-mask: url("#Stage_p01f06_mask");
+  -webkit-mask-repeat:no-repeat;
 }
 </style>
 <body style="margin:0;padding:0;overflow: hidden;background-color:#000000;">
